# fastc

./: .Tpo  .gitignore  .gitmodules  Makefile  Makefile.am  README.md  RTM.c  \  clean.sh  configure.ac  demo_script.sh  faster_initial.xml  log  main.c.bak  max3_virtex6  max4_stratix5  platform.txt  platform.txt.bak2  ray1.c  tests.sh  update
aspects/: designModel.lara  designSpaceExploration.lara  dspBalance.lara  harmonic.lara  harmonic.xml  lutUsage.lara  main.lara  pipelineDepth.lara  reconfigure.lara  watch.lara
demos/black-scholes/: Makefile
demos/black-scholes/cpu/: Convolution1d.c  kernel.cpp  kernel.hpp
demos/black-scholes/engine/: AppManager.java
demos/black-scholes/engine_orig/: MyApp.java
demos/black-scholes/maxc/: CmdRead.c  CmdWrite.c  main.c  test1dConvolutionKernel.exp
demos/rtm-adp/: Readme.md  clean  demo.sh  main.xml  meld  run  settings.sh  setup.sh
demos/rtm-adp/aspects/: harmonic.lara  main.lara
demos/rtm-adp/maxcc-include/: maxcc.h
demos/rtm-adp/src/: ADPKernel.c  RTMKernel.c
doc/: TODO
doc/papers/ASAP/: Makefile  acm-sig-proceedings.csl  content.tex  pgasap2013.tex  report.md  reviews.org
doc/papers/ICFPT/: Makefile  icfpt2013.tex
doc/papers/INDIN/: strategy.c
doc/pres/ASAP/: asap13pg48.ppt
doc/pres/meng/: Makefile  plan.md  presentation.tex
doc/reports/final/: Makefile  report.tex
doc/reports/interim/: Makefile  report.md  report.tex
doc/reports/synopsis/: Makefile  bibliography.bib  citation.txt  report.dvi  report.tex
example/: extending.cxx  multiple_kernels.c  passthrough.c
example/bitonic_sort/: Makefile
example/bitonic_sort/cpu/: PassThrough.c
example/bitonic_sort/maxc/: passthrough.c
include/: maxcc.h
prj/: Makefile  log
prj/SimBuilder/: _init.conf
prj/SimBuilder/scratch/: Cmdhostread.graphs  Cmdhostread_FIFOReport.txt  Cmdhostread_NodeDiary.txt  Cmdhostread_final-simulation.pxg  Cmdhostread_original.pxg  Cmdhostwrite.graphs  Cmdhostwrite_FIFOReport.txt  Cmdhostwrite_NodeDiary.txt  Cmdhostwrite_final-simulation.pxg  Cmdhostwrite_original.pxg  Cmdread0.graphs  Cmdread0_FIFOReport.txt  Cmdread0_NodeDiary.txt  Cmdread0_final-simulation.pxg  Cmdread0_original.pxg  Cmdread0_schedule_report.csv  Cmdread1.graphs  Cmdread1_FIFOReport.txt  Cmdread1_NodeDiary.txt  Cmdread1_final-simulation.pxg  Cmdread1_original.pxg  Cmdread1_photon_stats.csv  Cmdread2.graphs  Cmdread2_FIFOReport.txt  Cmdread2_NodeDiary.txt  Cmdread2_final-simulation.pxg  Cmdread2_original.pxg  Cmdread3.graphs  Cmdread3_FIFOReport.txt  Cmdread3_NodeDiary.txt  Cmdread3_final-simulation.pxg  Cmdread3_original.pxg  Cmdwrite0.graphs  Cmdwrite0_Configuration.txt  Cmdwrite0_FIFOReport.txt  Cmdwrite0_NodeDiary.txt  Cmdwrite0_final-simulation.pxg  Cmdwrite0_original.pxg  Cmdwrite0_photon_stats.csv  (+21 more)
prj/includes/: max_util.h
prj/tests/: marmousi.txt  marmousi_0.txt  marmousi_300_0.txt  marmousi_300_2.txt  marmousi_32.txt  marmousi_460.txt  rtm_parameters_large.txt  rtm_parameters_medium.txt  rtm_parameters_small.txt
prj/tmp/: image.out.H  image.out0  receiver_name_5.00_0.0004_1000_1_15_22_15_25.00.REMOVED.git-id
scripts/: dse.sh
src/: ASTtoDFGVisitor.cxx  ASTtoMaxJVisitor.cxx  AstToDfgVisitor.cxx  AstToDfgVisitor.hxx  AstToMaxJVisitor.cxx  AstToMaxJVisitor.hxx  Compiler.hxx  Design.cxx  Design.hxx  DfeGraph.cxx  DfeGraph.hxx  DfeTask.cxx  DfeTask.hxx  DfeTopSortVisitor.cxx  DfeTopSortVisitor.hxx  DotDFSVisitor.cxx  DotDFSVisitor.hxx  DotPrint.cxx  DotPrint.hxx  Kernel.cxx  Kernel.hxx  KernelVisitor.cxx  KernelVisitor.hxx  MaxJVisitor.cxx  MaxJVisitor.hxx  PragmaVisitor.cxx  PragmaVisitor.hxx  Stencil.cc  Stencil.h  StencilAstToDfgVisitor.cc  StencilAstToDfgVisitor.h  StencilAstToMaxJVisitor.cc  StencilAstToMaxJVisitor.h  StencilCodeGenerator.cc  StencilCodeGenerator.h  StencilOffset.cc  StencilOffset.h  hello.cxx  main.cxx  main.hxx  (+4 more)
src/DataFlowGraph/: BFSVisitor.cxx  BFSVisitor.hxx  CounterNode.cxx  CounterNode.hxx  DFSVisitor.cxx  DFSVisitor.hxx  DataFlowGraph.cxx  DataFlowGraph.hxx  InputNode.cxx  InputNode.hxx  MuxNode.cxx  MuxNode.hxx  Node.cxx  Node.hxx  OutputNode.cxx  OutputNode.hxx  SinkNode.cxx  SinkNode.hxx  SourceNode.cxx  SourceNode.hxx  TopSortVisitor.cxx  TopSortVisitor.hxx  Utils.h  dfg.cxx
src/highlevel/: HLAVisitor.cxx  HLAVisitor.hxx  HighlevelAnalysis.cxx  HighlevelAnalysis.hxx
src/ife/: .IFEVisitor.cxx.swp  Configuration.h  IFEVisitor.cxx  IFEVisitor.hxx  IdlefunctionElimination.cxx  IdlefunctionElimination.hxx  Partition.h  Segment.h
src/passes/: BuildDFG.cxx  BuildDFG.hxx  CodeGeneration.cxx  CodeGeneration.hxx  Config.hxx  ExtractDesignConstants.hxx  ExtractOutputs.cxx  ExtractOutputs.hxx  ExtractStencil.cc  ExtractStencil.h  GenerateAnalysisOverview.cc  GenerateAnalysisOverview.h  HostCodeGeneration.hxx  InlineKernels.cxx  InlineKernels.hxx  InputOutputExtraction.hxx  KernelExtraction.cxx  KernelExtraction.hxx  KernelVisitor.cxx  KernelVisitor.hxx  ManagerExtraction.hxx  MergeKernels.cc  MergeKernels.h  Pass.hxx  Passes.hxx  PragmaExtraction.hxx  PrintDotDFG.cxx  PrintDotDFG.hxx  RemoveFast.hxx  TaskExtraction.cxx  TaskExtraction.hxx
src/xml/: main.cpp  xmlParser.cxx
test/: applications.sh  common.sh  dfg.sh  highlevel.sh  new.sh  testMaxCTemplate.c  testMaxCTemplate.exp
test/applications/: ADP.c  ADP.exp  PassThrough.c  PassThrough.exp  RTM.c  RTMKernel.c  RTMKernel.exp
test/common/: Arrays.c  Arrays.exp  CmdRead.c  CmdRead.exp  CmdWrite.c  Counter.c  Mux.exp  Scalars.c  Types.c
test/highlevel/: Dfg.c  Dfg.exp  ray1.c  ray2.c
test/maxc/: test1dConvolutionKernel.c  test1dConvolutionKernel.exp  testArrays.c  testArrays.exp  testCmdRead.c  testCmdRead.exp  testCmdWrite.c  testCmdWrite.exp  testCounter.c  testMaxCTemplate.c  testMaxCTemplate.exp  testMaxCTemplate.out  testRTMSingle.c  testRTMSingle.exp  testTypes.c  testTypes.exp
test/rtm_float_single/: Makefile
test/test1dConvolution/: Makefile
test/testRTMStatic/: Makefile  deploy.sh  dse.sh
test/testRTMStatic-64bit/: Makefile
test/testStencil/: RTM_simple_stencil.c
test_run/testPassThrough/: Makefile
test_run/testRTMStatic/: dse.sh
(+215 files in other folders)
